supposedly fixed book overlap issue

--- a/app/assets/stylesheets/shared/books.scss
+++ b/app/assets/stylesheets/shared/books.scss
@@ -9,10 +9,12 @@
 }
 
 .books-box {
-  height: 50%;
-  width: 50%;
+  height: 100%;
+  width: 80%;
   display:flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .book-image-box {
@@ -29,9 +31,10 @@
 }
 
 .book-content-box {
-  height: 100%;
-  width: 100%;
+  height: 30%;
+  width: 50%;
   text-align: center;
+  margin-top: 2em;
 }
 
 .white-text {
@@ -43,23 +46,17 @@
 @media screen and (min-width: 800px) {
   .books-box {
     flex-direction: row;
-    width: 50%;
   }
 
   .books {
     background-attachment: fixed;
   }
 
-  .book-image-box {
-    width: 40%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
   .book-content-box {
-  width: 50%;
+  width: 30%;
+  margin-top: 0em;
+  margin-left: 2em;
+  height: 100%;
   display:flex;
   align-items: center;
   text-align: left;
